Add Registration page

--- a/templates/bundles/FOSUserBundle/Security/login.html.twig
+++ b/templates/bundles/FOSUserBundle/Security/login.html.twig
@@ -40,7 +40,7 @@
                                 <div class="bottom">
                                     <span class="helper-text m-b-10"><i class="fa fa-lock"></i> <a
                                                 href="page-forgot-password.html">{{ 'login_page.forgot_password'|trans({},'ums') }}</a></span>
-                                    <span>{{ 'login_page.have_not_account'|trans({},'ums') }} <a href="page-register.html">{{ 'login_page.register'|trans({},'ums') }}</a></span>
+                                    <span>{{ 'login_page.have_not_account'|trans({},'ums') }} <a href="/register">{{ 'login_page.register'|trans({},'ums') }}</a></span>
                                 </div>
                             </form>
                         </div>
