--- a/assets/scss/pages/_widgets-weather.scss
+++ b/assets/scss/pages/_widgets-weather.scss
@@ -101,7 +101,7 @@
         height: 430px;
         width: 100%;
         overflow: hidden;
-        background: url('../../../assets/images/weather_img.jpg') no-repeat;
+        background: url('../images/weather_img.jpg') no-repeat;
         background-size: cover;
         background-position: center center;        
 
