--- a/templates/bundles/FOSUserBundle/Security/login.html.twig
+++ b/templates/bundles/FOSUserBundle/Security/login.html.twig
@@ -39,7 +39,7 @@
                                 <input type="submit" id="_submit" name="_submit" class="btn btn-primary btn-lg btn-block" value="{{ 'security.login.submit'|trans }}"/>
                                 <div class="bottom">
                                     <span class="helper-text m-b-10"><i class="fa fa-lock"></i> <a
-                                                href="page-forgot-password.html">{{ 'login_page.forgot_password'|trans({},'ums') }}</a></span>
+                                                href="/resetting/request">{{ 'login_page.forgot_password'|trans({},'ums') }}</a></span>
                                     <span>{{ 'login_page.have_not_account'|trans({},'ums') }} <a href="/user_register">{{ 'login_page.register'|trans({},'ums') }}</a></span>
                                 </div>
                             </form>
