Update Registration Template

--- a/assets/scss/partials/_authentication.scss
+++ b/assets/scss/partials/_authentication.scss
@@ -33,7 +33,11 @@
 
 .auth-box {
 	width: 380px;
-	height: auto;	    
+	height: auto;
+    /* Yun */
+    margin-top: 20px;
+    margin-bottom: 20px;
+    /*******/
     margin-left: 130px;    
 
 	.top{
