--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,7 @@
             <link rel="stylesheet" href="{{ asset('css/color_skins.css') }}"/>
         {% endblock %}
     </head>
-    <body class="theme-purple">
+    <body class="theme-orange">
         {% block body %}{% endblock %}
         {% block footer %}{% endblock %}
         {% block javascripts %}
