Update registration email template, and add username email validation

--- a/assets/scss/partials/_forms.scss
+++ b/assets/scss/partials/_forms.scss
@@ -192,6 +192,14 @@ label {
 		}
 	}
 }
+.form-control-errors {
+	ul {
+		list-style-type: none;
+		padding: 0;
+		padding-left: 1em;
+		color: $color-danger;
+	}
+}
 /*****************************************************************/
 
 .help-block {
