--- a/assets/scss/partials/_authentication.scss
+++ b/assets/scss/partials/_authentication.scss
@@ -109,3 +109,31 @@
         width: 90%;
 	}
 }
+
+/***************** Yun *****************/
+.register-check-email, .register-confirm {
+  width: 50%;
+  font-size: 15px;
+  margin: 100px auto;
+  text-align: center;
+  padding: 200px 50px;
+  background: $col-white;
+  border: 1px solid $col-white;
+  border-radius: $border-radius-extreme;
+  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.1);
+}
+
+.register-confirm {
+  .register-confirm-title {
+    font-size: 20px;
+    font-weight: bold;
+  }
+  .register-confirm-msg {
+    margin-top: 20px;
+    font-size: 18px;
+    a {
+      color: $col-orange;
+    }
+  }
+}
+/***************************************/
