--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4655,6 +4655,7 @@ label {
     outline: none;
     border-color: #c1c1c1; }
 
+/****************************** Yun ******************************/
 .form-group .form-control-select select {
   padding: .375rem .75rem;
   line-height: 1.5;
@@ -4664,6 +4665,13 @@ label {
   border-radius: .25em;
   transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out; }
 
+.form-control-errors ul {
+  list-style-type: none;
+  padding: 0;
+  padding-left: 1em;
+  color: #de4848; }
+
+/*****************************************************************/
 .help-block {
   font-size: 13px;
   color: #929292; }
@@ -4869,6 +4877,28 @@ select.form-control:not([size]):not([multiple]) {
     .auth-box {
       width: 90%; } }
 
+/***************** Yun *****************/
+.register-check-email, .register-confirm {
+  width: 50%;
+  font-size: 15px;
+  margin: 100px auto;
+  text-align: center;
+  padding: 200px 50px;
+  background: #ffffff;
+  border: 1px solid #ffffff;
+  border-radius: 0.875rem;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1); }
+
+.register-confirm .register-confirm-title {
+  font-size: 20px;
+  font-weight: bold; }
+.register-confirm .register-confirm-msg {
+  margin-top: 20px;
+  font-size: 18px; }
+  .register-confirm .register-confirm-msg a {
+    color: #f5a81d; }
+
+/***************************************/
 .btn {
   font-size: 14px; }
 
