--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -17,11 +17,13 @@
                             <div class="form-group">
                                 {{ form_widget(form.lastname, {'attr': {'class': 'form-control', 'id': 'signup-lastname'}}) }}
                             </div>
-                            <div class="form-group">
+                            <div class="form-group form-control-errors">
                                 {{ form_widget(form.username, {'attr': {'class': 'form-control', 'id': 'signup-username'}}) }}
+                                {{ form_errors(form.username) }}
                             </div>
-                            <div class="form-group">
+                            <div class="form-group form-control-errors">
                                 {{ form_widget(form.email, {'attr': {'class': 'form-control', 'id': 'signup-email'}}) }}
+                                {{ form_errors(form.email) }}
                             </div>
                             <div class="form-group">
                                 {{ form_widget(form.plainPassword, {'attr': {'class': 'form-control', 'id': 'signup-password'}}) }}
