--- a/templates/bundles/FOSUserBundle/Resetting/reset.html.twig
+++ b/templates/bundles/FOSUserBundle/Resetting/reset.html.twig
@@ -1,5 +1,8 @@
-{% extends "@FOSUser/layout.html.twig" %}
+{% trans_default_domain 'FOSUserBundle' %}
 
-{% block fos_user_content %}
-{% include "@FOSUser/Resetting/reset_content.html.twig" %}
-{% endblock fos_user_content %}
+{{ form_start(form, { 'action': path('fos_user_resetting_reset', {'token': token}), 'attr': { 'class': 'fos_user_resetting_reset' } }) }}
+    {{ form_widget(form) }}
+    <div>
+        <input type="submit" value="{{ 'resetting.reset.submit'|trans }}" />
+    </div>
+{{ form_end(form) }}
