--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,10 +1,11 @@
 {% trans_default_domain 'ums' %}
 <!DOCTYPE html>
-<html>
+
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=Edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+        {#<link rel="icon" href="favicon.ico" type="image/x-icon">#}
         <title>
             {% block title %}{{ 'base.title'|trans }}{% endblock %}
         </title>
