--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -15,17 +15,39 @@
         <!-- VENDOR CSS -->
         <link rel="stylesheet" href="{{ asset('vendor/bootstrap/css/bootstrap.min.css') }}"/>
         <link rel="stylesheet" href="{{ asset('vendor/font-awesome/css/font-awesome.min.css') }}"/>
+
         <!-- MAIN CSS -->
         <link rel="stylesheet" href="{{ asset('css/main.css') }}"/>
         <link rel="stylesheet" href="{{ asset('css/color_skins.css') }}"/>
     {% endblock %}
 </head>
 <body class="theme-orange">
-{% block body %}{% endblock %}
+
+<!-- Page Loader -->
+{% block loader %}
+    <div class="page-loader-wrapper">
+        <div class="loader">
+            <div class="m-t-30"><img src="{{ asset('images/logo-icon.svg') }}" width="48" height="48" alt="Logo"></div>
+            <p>{{ 'base.loader'|trans }}</p>
+        </div>
+    </div>
+{% endblock %}
+
+<div id="wrapper">
+    {% block navbar_top %}{% endblock %}
+    {% block sidebar %}{% endblock %}
+    {% block main_content %}{% endblock %}
+</div>
+
 {% block footer %}{% endblock %}
+
+<!-- Javascript -->
 {% block javascripts %}
     <script src="{{ asset('vendor/jquery/jquery-3.3.1.min.js') }}"></script>
     <script src="{{ asset('vendor/bootstrap/js/bootstrap.min.js') }}"></script>
+    <script src="{{ asset('bundles_js/mainscripts.bundle.js') }}"></script>
+
+
 {% endblock %}
 </body>
 </html>
