--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -2,9 +2,10 @@
 {% trans_default_domain 'ums' %}
 
 {% block stylesheets %}
-{{ parent() }}
-<link rel="stylesheet" href="{{ asset('vendor/chartist/css/chartist.min.css') }}"/>
-<link rel="stylesheet" href="{{ asset('vendor/chartist-plugin-tooltip/chartist-plugin-tooltip.css') }}">
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('vendor/chartist/css/chartist.min.css') }}"/>
+    <link rel="stylesheet" href="{{ asset('vendor/chartist-plugin-tooltip/chartist-plugin-tooltip.css') }}">
+    <link rel="stylesheet" href="{{ asset('vendor/toastr/toastr.min.css') }}">
 {% endblock %}
 
 {% block main_content %}
@@ -12,13 +13,9 @@
 {% endblock %}
 
 {% block javascripts %}
-{{ parent() }}
-<script src="{{ asset('vendor/toastr/toastr.js') }}"></script>
-<script src="{{ asset('bundles_js/chartist.bundle.js') }}"></script>
-<script src="{{ asset('bundles_js/knob.bundle.js') }}"></script>
-
-<script src="{{ asset('bundles_js/libscripts.bundle.js') }}"></script>
-<script src="{{ asset('bundles_js/vendorscripts.bundle.js') }}"></script>
-
-<script src="{{ asset('js/index.js') }}"></script>
+    {{ parent() }}
+    <script src="{{ asset('vendor/toastr/toastr.js') }}"></script>
+    <script src="{{ asset('bundles_js/chartist.bundle.js') }}"></script>
+    <script src="{{ asset('bundles_js/knob.bundle.js') }}"></script>
+    <script src="{{ asset('js/index.js') }}"></script>
 {% endblock %}
