--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -34,8 +34,254 @@
 {% endblock %}
 
 <div id="wrapper">
-    {% block navbar_top %}{% endblock %}
-    {% block sidebar %}{% endblock %}
+    {% block navbar_top %}
+        <nav class="navbar navbar-fixed-top">
+            <div class="container-fluid">
+                <div class="navbar-btn">
+                    <button type="button" class="btn-toggle-offcanvas"><i class="lnr lnr-menu fa fa-bars"></i></button>
+                </div>
+
+                <div class="navbar-brand">
+                    <a href="/"><img src="{{ asset('images/logo.svg') }}" alt="Logo" class="img-responsive logo"></a>
+                </div>
+
+                <div class="navbar-right">
+                    <div id="navbar-menu">
+                        <ul class="nav navbar-nav">
+                            {#<li><a href="app-events.html" class="icon-menu d-none d-sm-block d-md-none d-lg-block"><i class="icon-calendar"></i></a></li>#}
+                            <li class="dropdown">
+                                <a href="javascript:void(0);" class="dropdown-toggle icon-menu" data-toggle="dropdown">
+                                    <i class="icon-bell"></i>
+                                    <span class="notification-dot"></span>
+                                </a>
+                                <ul class="dropdown-menu notifications animated shake">
+                                    <li class="header"><strong>You have 4 new Notifications</strong></li>
+                                    <li>
+                                        <a href="javascript:void(0);">
+                                            <div class="media">
+                                                <div class="media-left">
+                                                    <i class="icon-info text-warning"></i>
+                                                </div>
+                                                <div class="media-body">
+                                                    <p class="text">Campaign <strong>Holiday Sale</strong> is nearly reach budget limit.</p>
+                                                    <span class="timestamp">10:00 AM Today</span>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="javascript:void(0);">
+                                            <div class="media">
+                                                <div class="media-left">
+                                                    <i class="icon-like text-success"></i>
+                                                </div>
+                                                <div class="media-body">
+                                                    <p class="text">Your New Campaign <strong>Holiday Sale</strong> is approved.</p>
+                                                    <span class="timestamp">11:30 AM Today</span>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="javascript:void(0);">
+                                            <div class="media">
+                                                <div class="media-left">
+                                                    <i class="icon-pie-chart text-info"></i>
+                                                </div>
+                                                <div class="media-body">
+                                                    <p class="text">Website visits from Twitter is 27% higher than last week.</p>
+                                                    <span class="timestamp">04:00 PM Today</span>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="javascript:void(0);">
+                                            <div class="media">
+                                                <div class="media-left">
+                                                    <i class="icon-info text-danger"></i>
+                                                </div>
+                                                <div class="media-body">
+                                                    <p class="text">Error on website analytics configurations</p>
+                                                    <span class="timestamp">Yesterday</span>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="footer"><a href="javascript:void(0);" class="more">See all notifications</a></li>
+                                </ul>
+                            </li>
+                            <li class="dropdown">
+                                <a href="javascript:void(0);" class="dropdown-toggle icon-menu" data-toggle="dropdown"><i class="icon-equalizer"></i></a>
+                                <ul class="dropdown-menu user-menu menu-icon animated bounceIn">
+                                    <li class="menu-heading">ACCOUNT SETTINGS</li>
+                                    <li><a href="javascript:void(0);"><i class="icon-note"></i> <span>Basic</span></a></li>
+                                    <li><a href="javascript:void(0);"><i class="icon-equalizer"></i> <span>Preferences</span></a></li>
+                                    <li><a href="javascript:void(0);"><i class="icon-lock"></i> <span>Privacy</span></a></li>
+                                    <li><a href="javascript:void(0);"><i class="icon-bell"></i> <span>Notifications</span></a></li>
+                                    <li class="menu-heading">BILLING</li>
+                                    <li><a href="javascript:void(0);"><i class="icon-credit-card"></i> <span>Payments</span></a></li>
+                                    <li><a href="javascript:void(0);"><i class="icon-printer"></i> <span>Invoices</span></a></li>
+                                    <li><a href="javascript:void(0);"><i class="icon-refresh"></i> <span>Renewals</span></a></li>
+                                </ul>
+                            </li>
+                            <li><a href="/logout" class="icon-menu"><i class="icon-login"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
+
+    {% endblock %}
+    {% block sidebar %}
+        <div id="left-sidebar" class="sidebar">
+            <div class="sidebar-scroll">
+                <div class="user-account">
+                    <img src="{{ asset('images/user.png') }}" class="rounded-circle user-photo" alt="User Profile Picture">
+                    <div class="dropdown">
+                        <span>{{ 'sidebar.welcome'|trans }}</span>
+                        <a href="javascript:void(0);" class="dropdown-toggle user-name" data-toggle="dropdown"><strong>Jessica Doe</strong></a>
+                        <ul class="dropdown-menu dropdown-menu-right account animated flipInY">
+                            <li><a href="/profile"><i class="icon-user"></i>{{ 'sidebar.profile'|trans }}</a></li>
+                            <li class="divider"></li>
+                            <li><a href="/logout"><i class="icon-power"></i>{{ 'sidebar.logout'|trans }}</a></li>
+                        </ul>
+                    </div>
+                    <hr>
+                </div>
+                <!-- Nav tabs -->
+                <ul class="nav nav-tabs">
+                    <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#menu"><i class="icon-grid"></i></a></li>
+                    {% if app.user.roles[0] == 'ROLE_SUPER_ADMIN' %}
+                    <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#admin_menu">{{ 'sidebar.admin'|trans }}</a></li>
+                    {% endif %}
+                    <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#setting"><i class="icon-settings"></i></a></li>
+                </ul>
+
+                <!-- Tab panes -->
+                <div class="tab-content p-l-0 p-r-0">
+                    <div class="tab-pane animated fadeIn active" id="menu">
+                        <nav class="sidebar-nav">
+                            <ul class="main-menu metismenu">
+                                <li class="active"><a href="/"><i class="icon-home"></i><span>{{ 'sidebar.index'|trans }}</span></a></li>
+                                <li><a href="/profile"><i class="icon-user"></i>{{ 'sidebar.profile'|trans }}</a></li>
+                                <li><a href="javascript:void(0);"><i class="icon-basket-loaded"></i>{{ 'sidebar.buy_histo'|trans }}</a></li>
+                                <li>
+                                    <a href="javascript:void(0);" class="has-arrow"><i class="icon-plane"></i><span>{{ 'sidebar.product_source'|trans }}</span></a>
+                                    <ul>
+                                        <li><a href="emp-all.html">All Employees</a></li>
+                                        <li><a href="emp-leave.html">Leave Requests</a></li>
+                                        <li><a href="emp-attendance.html">Attendance</a></li>
+                                        <li><a href="emp-departments.html">Departments</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    {% if app.user.roles[0] == 'ROLE_SUPER_ADMIN' %}
+                    <div class="tab-pane animated fadeIn" id="admin_menu">
+                        <nav class="sidebar-nav">
+                            <ul class="main-menu metismenu">
+                                <li><a href="index2.html"><i class="icon-speedometer"></i><span>Dashboard</span></a></li>
+                                <li><a href="app-inbox.html"><i class="icon-envelope"></i>Inbox App</a></li>
+                                <li><a href="app-chat.html"><i class="icon-bubbles"></i>Chat App</a></li>
+                                <li>
+                                    <a href="#Projects" class="has-arrow"><i class="icon-list"></i><span>Projects</span></a>
+                                    <ul>
+                                        <li><a href="project-add.html">Add Projects</a></li>
+                                        <li><a href="project-list.html">Projects List</a></li>
+                                        <li><a href="project-detail.html">Projects Detail</a></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a href="#Clients" class="has-arrow"><i class="icon-user"></i><span>Clients</span></a>
+                                    <ul>
+                                        <li><a href="client-add.html">Add Clients</a></li>
+                                        <li><a href="client-list.html">Clients List</a></li>
+                                        <li><a href="client-detail.html">Clients Detail</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="app-taskboard.html"><i class="icon-tag"></i>Taskboard</a></li>
+                                <li><a href="app-tickets.html"><i class="icon-screen-tablet"></i>Tickets</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                    {% endif %}
+                    <div class="tab-pane animated fadeIn" id="setting">
+                        <div class="p-l-15 p-r-15">
+                            <h6>Choose Skin</h6>
+                            <ul class="choose-skin list-unstyled">
+                                <li data-theme="purple">
+                                    <div class="purple"></div>
+                                    <span>Purple</span>
+                                </li>
+                                <li data-theme="blue">
+                                    <div class="blue"></div>
+                                    <span>Blue</span>
+                                </li>
+                                <li data-theme="cyan">
+                                    <div class="cyan"></div>
+                                    <span>Cyan</span>
+                                </li>
+                                <li data-theme="green">
+                                    <div class="green"></div>
+                                    <span>Green</span>
+                                </li>
+                                <li data-theme="orange" class="active">
+                                    <div class="orange"></div>
+                                    <span>Orange</span>
+                                </li>
+                                <li data-theme="blush">
+                                    <div class="blush"></div>
+                                    <span>Blush</span>
+                                </li>
+                            </ul>
+                            <hr>
+                            <h6>General Settings</h6>
+                            <ul class="setting-list list-unstyled">
+                                <li>
+                                    <label class="fancy-checkbox">
+                                        <input type="checkbox" name="checkbox">
+                                        <span>Report Panel Usag</span>
+                                    </label>
+                                </li>
+                                <li>
+                                    <label class="fancy-checkbox">
+                                        <input type="checkbox" name="checkbox">
+                                        <span>Email Redirect</span>
+                                    </label>
+                                </li>
+                                <li>
+                                    <label class="fancy-checkbox">
+                                        <input type="checkbox" name="checkbox" checked>
+                                        <span>Notifications</span>
+                                    </label>
+                                </li>
+                                <li>
+                                    <label class="fancy-checkbox">
+                                        <input type="checkbox" name="checkbox" checked>
+                                        <span>Auto Updates</span>
+                                    </label>
+                                </li>
+                                <li>
+                                    <label class="fancy-checkbox">
+                                        <input type="checkbox" name="checkbox">
+                                        <span>Offline</span>
+                                    </label>
+                                </li>
+                                <li>
+                                    <label class="fancy-checkbox">
+                                        <input type="checkbox" name="checkbox" checked>
+                                        <span>Location Permission</span>
+                                    </label>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% endblock %}
     {% block main_content %}{% endblock %}
 </div>
 
@@ -43,11 +289,10 @@
 
 <!-- Javascript -->
 {% block javascripts %}
-    <script src="{{ asset('vendor/jquery/jquery-3.3.1.min.js') }}"></script>
-    <script src="{{ asset('vendor/bootstrap/js/bootstrap.min.js') }}"></script>
+    <script src="{{ asset('bundles_js/libscripts.bundle.js') }}"></script>
+    <script src="{{ asset('bundles_js/vendorscripts.bundle.js') }}"></script>
+
     <script src="{{ asset('bundles_js/mainscripts.bundle.js') }}"></script>
-
-
 {% endblock %}
 </body>
 </html>
