--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -46,3 +46,8 @@
 @import "pages/calendar";
 @import "pages/pricing";
 @import "pages/invoice";
+
+/**
+* Customer
+*/
+@import "customer/customer";
