--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -1,6 +1,8 @@
 {% extends 'layout.html.twig' %}
 {% trans_default_domain 'ums' %}
 
+{% set user_name = app.user.firstname ~ " " ~ app.user.lastname %}
+
 {% block stylesheets %}
     {{ parent() }}
     <link rel="stylesheet" href="{{ asset('vendor/chartist/css/chartist.min.css') }}"/>
