--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -139,12 +139,13 @@
                 <div class="user-account">
                     <img src="{{ asset('images/user.png') }}" class="rounded-circle user-photo" alt="User Profile Picture">
                     <div class="dropdown">
-                        <span>{{ 'sidebar.welcome'|trans }}</span>
-                        <a href="javascript:void(0);" class="dropdown-toggle user-name" data-toggle="dropdown"><strong>Jessica Doe</strong></a>
+                        {% set user_role = 'roles.' ~ app.user.roles[0] %}
+                        <span>{{ user_role|trans }} {{ 'sidebar.menu.welcome'|trans }}</span>
+                        <a href="javascript:void(0);" class="dropdown-toggle user-name" data-toggle="dropdown"><strong>{{ user_name }}</strong></a>
                         <ul class="dropdown-menu dropdown-menu-right account animated flipInY">
-                            <li><a href="/profile"><i class="icon-user"></i>{{ 'sidebar.profile'|trans }}</a></li>
+                            <li><a href="/profile"><i class="icon-user"></i>{{ 'sidebar.menu.profile'|trans }}</a></li>
                             <li class="divider"></li>
-                            <li><a href="/logout"><i class="icon-power"></i>{{ 'sidebar.logout'|trans }}</a></li>
+                            <li><a href="/logout"><i class="icon-power"></i>{{ 'sidebar.menu.logout'|trans }}</a></li>
                         </ul>
                     </div>
                     <hr>
@@ -152,8 +153,8 @@
                 <!-- Nav tabs -->
                 <ul class="nav nav-tabs">
                     <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#menu"><i class="icon-grid"></i></a></li>
-                    {% if app.user.roles[0] == 'ROLE_SUPER_ADMIN' %}
-                    <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#admin_menu">{{ 'sidebar.admin'|trans }}</a></li>
+                    {% if is_granted('ROLE_ADMIN') %}
+                    <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#admin_menu">{{ 'sidebar.menu.admin'|trans }}</a></li>
                     {% endif %}
                     <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#setting"><i class="icon-settings"></i></a></li>
                 </ul>
@@ -163,117 +164,68 @@
                     <div class="tab-pane animated fadeIn active" id="menu">
                         <nav class="sidebar-nav">
                             <ul class="main-menu metismenu">
-                                <li class="active"><a href="/"><i class="icon-home"></i><span>{{ 'sidebar.index'|trans }}</span></a></li>
-                                <li><a href="/profile"><i class="icon-user"></i>{{ 'sidebar.profile'|trans }}</a></li>
-                                <li><a href="javascript:void(0);"><i class="icon-basket-loaded"></i>{{ 'sidebar.buy_histo'|trans }}</a></li>
+                                <li class="active"><a href="/"><i class="icon-home"></i><span>{{ 'sidebar.menu.index'|trans }}</span></a></li>
+                                <li><a href="/profile"><i class="icon-user"></i>{{ 'sidebar.menu.profile'|trans }}</a></li>
+                                <li><a href="javascript:void(0);"><i class="icon-basket-loaded"></i>{{ 'sidebar.menu.buy_histo'|trans }}</a></li>
                                 <li>
-                                    <a href="javascript:void(0);" class="has-arrow"><i class="icon-plane"></i><span>{{ 'sidebar.product_source'|trans }}</span></a>
+                                    <a href="javascript:void(0);" class="has-arrow"><i class="icon-plane"></i><span>{{ 'sidebar.menu.product_source'|trans }}</span></a>
                                     <ul>
-                                        <li><a href="emp-all.html">All Employees</a></li>
-                                        <li><a href="emp-leave.html">Leave Requests</a></li>
-                                        <li><a href="emp-attendance.html">Attendance</a></li>
-                                        <li><a href="emp-departments.html">Departments</a></li>
+                                        <li><a href="javascript:void(0);">All Employees</a></li>
+                                        <li><a href="javascript:void(0);">Leave Requests</a></li>
+                                        <li><a href="javascript:void(0);">Attendance</a></li>
+                                        <li><a href="javascript:void(0);">Departments</a></li>
                                     </ul>
                                 </li>
                             </ul>
                         </nav>
                     </div>
-                    {% if app.user.roles[0] == 'ROLE_SUPER_ADMIN' %}
+                    {% if is_granted('ROLE_ADMIN') %}
                     <div class="tab-pane animated fadeIn" id="admin_menu">
                         <nav class="sidebar-nav">
                             <ul class="main-menu metismenu">
-                                <li><a href="index2.html"><i class="icon-speedometer"></i><span>Dashboard</span></a></li>
-                                <li><a href="app-inbox.html"><i class="icon-envelope"></i>Inbox App</a></li>
-                                <li><a href="app-chat.html"><i class="icon-bubbles"></i>Chat App</a></li>
-                                <li>
-                                    <a href="#Projects" class="has-arrow"><i class="icon-list"></i><span>Projects</span></a>
+                                <li><a href="javascript:void(0);"><i class="icon-users"></i><span>{{ 'sidebar.admin.users'|trans }}</span></a></li>
+                                <li><a href="javascript:void(0);"><i class="icon-users"></i>{{ 'sidebar.admin.sellers'|trans }}</a></li>
+                                <li><a href="javascript:void(0);"><i class="icon-diamond"></i>{{ 'sidebar.admin.admins'|trans }}</a></li>
+                                <li><a href="javascript:void(0);"><i class="icon-basket-loaded"></i>{{ 'sidebar.admin.products'|trans }}</a></li>
+                                {#<li>
+                                    <a href="javascript:void(0);" class="has-arrow"><i class="icon-list"></i><span>Projects</span></a>
                                     <ul>
                                         <li><a href="project-add.html">Add Projects</a></li>
                                         <li><a href="project-list.html">Projects List</a></li>
                                         <li><a href="project-detail.html">Projects Detail</a></li>
                                     </ul>
-                                </li>
-                                <li>
-                                    <a href="#Clients" class="has-arrow"><i class="icon-user"></i><span>Clients</span></a>
-                                    <ul>
-                                        <li><a href="client-add.html">Add Clients</a></li>
-                                        <li><a href="client-list.html">Clients List</a></li>
-                                        <li><a href="client-detail.html">Clients Detail</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="app-taskboard.html"><i class="icon-tag"></i>Taskboard</a></li>
-                                <li><a href="app-tickets.html"><i class="icon-screen-tablet"></i>Tickets</a></li>
+                                </li>#}
                             </ul>
                         </nav>
                     </div>
                     {% endif %}
                     <div class="tab-pane animated fadeIn" id="setting">
                         <div class="p-l-15 p-r-15">
-                            <h6>Choose Skin</h6>
+                            <h6>{{ 'sidebar.setting.skins'|trans }}</h6>
                             <ul class="choose-skin list-unstyled">
                                 <li data-theme="purple">
                                     <div class="purple"></div>
-                                    <span>Purple</span>
+                                    <span>{{ 'sidebar.setting.purple'|trans }}</span>
                                 </li>
                                 <li data-theme="blue">
                                     <div class="blue"></div>
-                                    <span>Blue</span>
+                                    <span>{{ 'sidebar.setting.blue'|trans }}</span>
                                 </li>
                                 <li data-theme="cyan">
                                     <div class="cyan"></div>
-                                    <span>Cyan</span>
+                                    <span>{{ 'sidebar.setting.cyan'|trans }}</span>
                                 </li>
                                 <li data-theme="green">
                                     <div class="green"></div>
-                                    <span>Green</span>
+                                    <span>{{ 'sidebar.setting.green'|trans }}</span>
                                 </li>
                                 <li data-theme="orange" class="active">
                                     <div class="orange"></div>
-                                    <span>Orange</span>
+                                    <span>{{ 'sidebar.setting.orange'|trans }}</span>
                                 </li>
                                 <li data-theme="blush">
                                     <div class="blush"></div>
-                                    <span>Blush</span>
-                                </li>
-                            </ul>
-                            <hr>
-                            <h6>General Settings</h6>
-                            <ul class="setting-list list-unstyled">
-                                <li>
-                                    <label class="fancy-checkbox">
-                                        <input type="checkbox" name="checkbox">
-                                        <span>Report Panel Usag</span>
-                                    </label>
-                                </li>
-                                <li>
-                                    <label class="fancy-checkbox">
-                                        <input type="checkbox" name="checkbox">
-                                        <span>Email Redirect</span>
-                                    </label>
-                                </li>
-                                <li>
-                                    <label class="fancy-checkbox">
-                                        <input type="checkbox" name="checkbox" checked>
-                                        <span>Notifications</span>
-                                    </label>
-                                </li>
-                                <li>
-                                    <label class="fancy-checkbox">
-                                        <input type="checkbox" name="checkbox" checked>
-                                        <span>Auto Updates</span>
-                                    </label>
-                                </li>
-                                <li>
-                                    <label class="fancy-checkbox">
-                                        <input type="checkbox" name="checkbox">
-                                        <span>Offline</span>
-                                    </label>
-                                </li>
-                                <li>
-                                    <label class="fancy-checkbox">
-                                        <input type="checkbox" name="checkbox" checked>
-                                        <span>Location Permission</span>
-                                    </label>
+                                    <span>{{ 'sidebar.setting.blush'|trans }}</span>
                                 </li>
                             </ul>
                         </div>
