--- a/assets/scss/customer/_customer.scss
+++ b/assets/scss/customer/_customer.scss
@@ -1,9 +1,12 @@
-#wrapper {
-  .navbar-fixed-top {
-    top: 0 !important;
-  }
+@media screen and (min-width: 992px) {
+  #wrapper {
+    .navbar-fixed-top {
+      top: 0 ;
+    }
 
-  #left-sidebar {
-    left: 0 !important;
+    #left-sidebar {
+      left: 0 ;
+    }
   }
 }
+
