--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -140,6 +140,7 @@
                     <img src="{{ asset('images/user.png') }}" class="rounded-circle user-photo" alt="User Profile Picture">
                     <div class="dropdown">
                         {% set user_role = 'roles.' ~ app.user.roles[0] %}
+                        {% set user_name = app.user.firstname ~ " " ~ app.user.lastname %}
                         <span>{{ user_role|trans }} {{ 'sidebar.menu.welcome'|trans }}</span>
                         <a href="javascript:void(0);" class="dropdown-toggle user-name" data-toggle="dropdown"><strong>{{ user_name }}</strong></a>
                         <ul class="dropdown-menu dropdown-menu-right account animated flipInY">
@@ -167,6 +168,7 @@
                                 <li class="active"><a href="/"><i class="icon-home"></i><span>{{ 'sidebar.menu.index'|trans }}</span></a></li>
                                 <li><a href="/profile"><i class="icon-user"></i>{{ 'sidebar.menu.profile'|trans }}</a></li>
                                 <li><a href="javascript:void(0);"><i class="icon-basket-loaded"></i>{{ 'sidebar.menu.buy_histo'|trans }}</a></li>
+                                <li><a href="javascript:void(0);"><i class="icon-basket-loaded"></i>{{ 'sidebar.menu.product_info'|trans }}</a></li>
                                 <li>
                                     <a href="javascript:void(0);" class="has-arrow"><i class="icon-plane"></i><span>{{ 'sidebar.menu.product_source'|trans }}</span></a>
                                     <ul>
@@ -186,7 +188,7 @@
                                 <li><a href="javascript:void(0);"><i class="icon-users"></i><span>{{ 'sidebar.admin.users'|trans }}</span></a></li>
                                 <li><a href="javascript:void(0);"><i class="icon-users"></i>{{ 'sidebar.admin.sellers'|trans }}</a></li>
                                 <li><a href="javascript:void(0);"><i class="icon-diamond"></i>{{ 'sidebar.admin.admins'|trans }}</a></li>
-                                <li><a href="javascript:void(0);"><i class="icon-basket-loaded"></i>{{ 'sidebar.admin.products'|trans }}</a></li>
+
                                 {#<li>
                                     <a href="javascript:void(0);" class="has-arrow"><i class="icon-list"></i><span>Projects</span></a>
                                     <ul>
@@ -234,7 +236,9 @@
             </div>
         </div>
     {% endblock %}
+    <div id="main-content">
     {% block main_content %}{% endblock %}
+    </div>
 </div>
 
 {% block footer %}{% endblock %}
