--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -161,13 +161,14 @@
                 </ul>
 
                 <!-- Tab panes -->
+                {% block tab_content %}
                 <div class="tab-content p-l-0 p-r-0">
                     <div class="tab-pane animated fadeIn active" id="menu">
                         <nav class="sidebar-nav">
                             <ul class="main-menu metismenu">
                                 <li class="active"><a href="/"><i class="icon-home"></i><span>{{ 'sidebar.menu.index'|trans }}</span></a></li>
                                 <li><a href="/profile"><i class="icon-user"></i>{{ 'sidebar.menu.profile'|trans }}</a></li>
-                                <li><a href="javascript:void(0);"><i class="icon-basket-loaded"></i>{{ 'sidebar.menu.buy_histo'|trans }}</a></li>
+                                <li><a href="/purchasehistory"><i class="icon-basket-loaded"></i>{{ 'sidebar.menu.buy_histo'|trans }}</a></li>
                                 <li>
                                     <a href="javascript:void(0);" class="has-arrow"><i class="icon-plane"></i><span>{{ 'sidebar.menu.product_source'|trans }}</span></a>
                                     <ul>
@@ -232,6 +233,7 @@
                         </div>
                     </div>
                 </div>
+                {% endblock %}
             </div>
         </div>
     {% endblock %}
