--- a/templates/purchase/index.html.twig
+++ b/templates/purchase/index.html.twig
@@ -10,7 +10,79 @@
     <link rel="stylesheet" href="{{ asset('vendor/sweetalert/sweetalert.css') }}"/>
 
 {% endblock %}
-
+{% block tab_content %}
+    <div class="tab-content p-l-0 p-r-0">
+        <div class="tab-pane animated fadeIn active" id="menu">
+            <nav class="sidebar-nav">
+                <ul class="main-menu metismenu">
+                    <li><a href="/"><i class="icon-home"></i><span>{{ 'sidebar.menu.index'|trans }}</span></a></li>
+                    <li><a href="/profile"><i class="icon-user"></i>{{ 'sidebar.menu.profile'|trans }}</a></li>
+                    <li class="active"><a href="/purchasehistory"><i class="icon-basket-loaded"></i>{{ 'sidebar.menu.buy_histo'|trans }}</a></li>
+                    <li>
+                        <a href="javascript:void(0);" class="has-arrow"><i class="icon-plane"></i><span>{{ 'sidebar.menu.product_source'|trans }}</span></a>
+                        <ul>
+                            <li><a href="javascript:void(0);">All Employees</a></li>
+                            <li><a href="javascript:void(0);">Leave Requests</a></li>
+                            <li><a href="javascript:void(0);">Attendance</a></li>
+                            <li><a href="javascript:void(0);">Departments</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        {% if is_granted('ROLE_ADMIN') %}
+            <div class="tab-pane animated fadeIn" id="admin_menu">
+                <nav class="sidebar-nav">
+                    <ul class="main-menu metismenu">
+                        <li><a href="javascript:void(0);"><i class="icon-users"></i><span>{{ 'sidebar.admin.users'|trans }}</span></a></li>
+                        <li><a href="javascript:void(0);"><i class="icon-users"></i>{{ 'sidebar.admin.sellers'|trans }}</a></li>
+                        <li><a href="javascript:void(0);"><i class="icon-diamond"></i>{{ 'sidebar.admin.admins'|trans }}</a></li>
+                        <li><a href="javascript:void(0);"><i class="icon-basket-loaded"></i>{{ 'sidebar.admin.products'|trans }}</a></li>
+                        {#<li>
+                            <a href="javascript:void(0);" class="has-arrow"><i class="icon-list"></i><span>Projects</span></a>
+                            <ul>
+                                <li><a href="project-add.html">Add Projects</a></li>
+                                <li><a href="project-list.html">Projects List</a></li>
+                                <li><a href="project-detail.html">Projects Detail</a></li>
+                            </ul>
+                        </li>#}
+                    </ul>
+                </nav>
+            </div>
+        {% endif %}
+        <div class="tab-pane animated fadeIn" id="setting">
+            <div class="p-l-15 p-r-15">
+                <h6>{{ 'sidebar.setting.skins'|trans }}</h6>
+                <ul class="choose-skin list-unstyled">
+                    <li data-theme="purple">
+                        <div class="purple"></div>
+                        <span>{{ 'sidebar.setting.purple'|trans }}</span>
+                    </li>
+                    <li data-theme="blue">
+                        <div class="blue"></div>
+                        <span>{{ 'sidebar.setting.blue'|trans }}</span>
+                    </li>
+                    <li data-theme="cyan">
+                        <div class="cyan"></div>
+                        <span>{{ 'sidebar.setting.cyan'|trans }}</span>
+                    </li>
+                    <li data-theme="green">
+                        <div class="green"></div>
+                        <span>{{ 'sidebar.setting.green'|trans }}</span>
+                    </li>
+                    <li data-theme="orange" class="active">
+                        <div class="orange"></div>
+                        <span>{{ 'sidebar.setting.orange'|trans }}</span>
+                    </li>
+                    <li data-theme="blush">
+                        <div class="blush"></div>
+                        <span>{{ 'sidebar.setting.blush'|trans }}</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+{% endblock %}
 {% block main_content %}
     <div id="main-content">
         <div class="container-fluid">
@@ -18,9 +90,9 @@
                 <div class="col-lg-12">
                     <div class="card">
                         <div class="body">
-                            <button id="addToTable" class="btn btn-primary m-b-15" type="button">
-                                <i class="icon wb-plus" aria-hidden="true"></i> {{ 'purchase_page.index.add_row'|trans }}
-                            </button>
+                            <a href="/purchasehistory/register"  class="btn btn-primary m-b-15">
+                                <i class="icon wb-plus" aria-hidden="false"></i>{{ 'purchase_page.index.add_row'|trans }}
+                            </a>
                             <div class="table-responsive">
                                 <table class="table table-bordered table-hover table-striped" cellspacing="0" id="addrowExample">
                                     <thead>
@@ -55,7 +127,8 @@
                                             <td>{{ p.PurchaseTrackingId }}</td>
                                             <td>{{ p.Quantity }}</td>
                                             <td class="actions">
-                                                <button ><a href="/purchasehistory/register"><i class="icon-pencil"></i>
+                                                <button >
+                                                    <a href="/purchasehistory/register"><i class="icon-pencil"></i></a>
                                                 </button>
                                                 <button class="btn btn-sm btn-icon btn-pure btn-default on-default button-remove"
                                                         data-toggle="tooltip" data-original-title="Remove"><i class="icon-trash" aria-hidden="true"></i>
