--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block sidebar %}
-    {% set tab_menu_index, tab_menu_profile, tab_menu_histo, tab_menu_source, tab_admin_users, tab_admin_sellers, tab_admin_admins, tab_admin_products = "active", "", "", "", "", "", "", "" %}
+    {% set tab_menu_index, tab_menu_profile, tab_menu_histo, tab_menu_source, tab_admin_users, tab_admin_sellers, tab_admin_admins, tab_admin_products, nav_menu, nav_admin = "active", "", "", "", "", "", "", "", "active", "" %}
     {{ parent() }}
 {% endblock %}
 
