--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -144,7 +144,7 @@
         </nav>
 
     {% endblock %}
-    {#{% set tab_menu_index, tab_menu_profile, tab_menu_histo, tab_menu_source, tab_admin_users, tab_admin_sellers, tab_admin_admins, tab_admin_products, nav_menu, nav_admin = "active", "", "", "", "", "", "", "", "active", "" %}#}
+    {% set tab_menu_index, tab_menu_profile, tab_menu_histo, tab_menu_source, tab_admin_users, tab_admin_sellers, tab_admin_admins, tab_admin_products, nav_menu, nav_admin = "active", "", "", "", "", "", "", "", "active", "" %}
     {% block sidebar %}
         <div id="left-sidebar" class="sidebar">
             <div class="sidebar-scroll">
