--- a/templates/bundles/FOSUserBundle/ChangePassword/change_password.html.twig
+++ b/templates/bundles/FOSUserBundle/ChangePassword/change_password.html.twig
@@ -16,7 +16,7 @@
                                         class="fa fa-arrow-left"></i></a>{{ 'profile_page.title'|trans }}</h2>
                         <ul class="breadcrumb">
                             <li class="breadcrumb-item"><a href="/"><i class="icon-home"></i></a></li>
-                            <li class="breadcrumb-item active">{{ 'profile_page.title'|trans }}</li>
+                            <li class="breadcrumb-item active">{{ 'profile_page.action.changepwd'|trans }}</li>
                         </ul>
                     </div>
                     <div class="col-lg-6 col-md-4 col-sm-12 text-right">
