Add UsersList for admin

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -208,12 +208,12 @@
                         <div class="tab-pane animated fadeIn {{ nav_admin }}" id="admin_menu">
                             <nav class="sidebar-nav">
                                 <ul class="main-menu metismenu">
-                                    <li class="{{ tab_admin_users }}"><a href="javascript:void(0);"><i
+                                    <li class="{{ tab_admin_users }}"><a href="/userList/users"><i
                                                     class="icon-users"></i><span>{{ 'sidebar.admin.users'|trans }}</span></a>
                                     </li>
-                                    <li class="{{ tab_admin_sellers }}"><a href="javascript:void(0);"><i
+                                    <li class="{{ tab_admin_sellers }}"><a href="/userList/sellers"><i
                                                     class="icon-users"></i>{{ 'sidebar.admin.sellers'|trans }}</a></li>
-                                    <li class="{{ tab_admin_admins }}"><a href="javascript:void(0);"><i
+                                    <li class="{{ tab_admin_admins }}"><a href="/userList/admins"><i
                                                     class="icon-diamond"></i>{{ 'sidebar.admin.admins'|trans }}</a></li>
                                     <li class="{{ tab_admin_products }}"><a href="/product"><i
                                                     class="icon-basket-loaded"></i>{{ 'sidebar.admin.products'|trans }}
