Fix class names

--- a/templates/bundles/FOSUserBundle/Profile/show.html.twig
+++ b/templates/bundles/FOSUserBundle/Profile/show.html.twig
@@ -46,7 +46,7 @@
             </div>
 
 
-            <div class="col-lg-8 col-md-12" style="margin:auto">
+            <div class="col-lg-8 col-md-12 m-auto">
                 <div class="card profile-header">
                     <div class="body">
                         <div class="profile-image"><img src="{{ asset('images/user.png') }}" class="rounded-circle"
