--- a/templates/bundles/FOSUserBundle/ChangePassword/change_password.html.twig
+++ b/templates/bundles/FOSUserBundle/ChangePassword/change_password.html.twig
@@ -45,7 +45,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-8 col-md-12" style="margin:auto">
+            <div class="col-lg-8 col-md-12 m-auto">
                 <div class="card">
                     <div class="body">
                         {{ form_start(form, { 'action': path('fos_user_change_password'), 'attr': { 'class': 'fos_user_change_password' } }) }}
