--- a/templates/bundles/FOSUserBundle/Profile/edit.html.twig
+++ b/templates/bundles/FOSUserBundle/Profile/edit.html.twig
@@ -45,7 +45,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-8 col-md-12" style="margin:auto">
+            <div class="col-lg-8 col-md-12 m-auto">
                 <div class="card">
                     <div class="header">
                         <h2>{{ 'profile_page.action.edit'|trans }}</h2>
